--- a/src/components/DisplayAvailability/DisplayAvailability.css
+++ b/src/components/DisplayAvailability/DisplayAvailability.css
@@ -21,7 +21,7 @@
 }
 
 .resultsIntro p{
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 .resultsIntro .bold{
   font-weight: 600;
