--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -118,11 +118,12 @@
 }
 
 .scheduleModal {
+  justify-content: center;
   min-width: 890px;
   padding: 4% 4% 0 4%;
 }
 
-.scheduleModal h1 {
+.scheduleModal h2 {
   font-size: 1.8em;
   margin-top: 1%;
 }
@@ -147,6 +148,7 @@
   width: 100%;
   min-width: 730px;
   max-width: 1200px;
+  min-height: 650px;
   padding: 0 8%;
 }
 
@@ -166,7 +168,10 @@
 .homeInput label{
   padding: 5px 0;
   margin-top: 30px;
+}
 
+.homeInput label:nth-of-type(3){
+  margin-bottom: 30px;
 }
 
 .formEventDetails>label:nth-child(1) {
@@ -185,7 +190,7 @@
 
 .formEventDetails input.success:focus,
 .react-multi-email.focused{
-  border: 1px solid #1657F3;
+  border: 2px solid #1657F3;
   outline: none;
 }
 
@@ -242,7 +247,7 @@
 }
 
 .react-multi-email.empty>span[data-placeholder]{
-  color: darkgrey;
+  color: #595959;
 }
 
 .react-multi-email>[data-tag] {
@@ -264,7 +269,8 @@
 }
 
 p.timezoneMessage:nth-of-type(1){
-  margin-top: 30px;
+  margin-top: 70px;
+  font-size: 1.1rem;
 }
 
 /* calendar section of form */
